use Integer.valueOf() instead new Integer() (findbugs)
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk@4592 a09ad3ba-1a0f-0410-b1b9-c67202f10d70